# coca

./: .gitignore  AGENTS.md  Cargo.toml  PRODUCT.md  README.md
.ai/: account-auth-mvp.md  deploy-runbook.md  gap.md  gui-v0.md  gui-v1.md  runtime-process-architecture-plan.md  session-render-v1-preview.html  terminal-integration-v1.md  web-redesign-completion-plan.md  web-v1-plan.md
.github/workflows/: ci.yml
app/: README.md
app/web/: index.html  package-lock.json  package.json  vite.config.ts
app/web/src/: styles.css
app/web/src/api/: client.ts  types.ts
app/web/src/ui/: App.tsx  AuthGate.tsx  ProfileView.tsx  TerminalPanel.tsx
crates/coca-app/: Cargo.toml
crates/coca-app/src/: lib.rs
crates/coca-core/: Cargo.toml
crates/coca-core/src/: catalog.rs  frontend.rs  http.rs  lib.rs  remote.rs  server.rs  settings.rs  share.rs  storage.rs
crates/coca-core/src/providers/: claude.rs  codex.rs
crates/coca-daemon/: Cargo.toml
crates/coca-daemon/src/: lib.rs
crates/coca-daemon/src/terminal/: backend.rs  mod.rs  session.rs  stream.rs
crates/coca-ipc/: Cargo.toml
crates/coca-ipc/src/: lib.rs
crates/coca-protocol/: Cargo.toml
crates/coca-protocol/src/: lib.rs
crates/coca-tui/: Cargo.toml
crates/coca-tui/src/: app.rs  core_client.rs  daemon_client.rs  event.rs  lib.rs  render.rs  views.rs
crates/coca-web/: Cargo.toml
crates/coca-web/src/: lib.rs
docs/: architecture-and-style.md  dev.md
src/: cli.rs  core_client.rs  daemon_client.rs  launch.rs  main.rs  model.rs  process.rs  remote.rs  settings.rs  share.rs
src/providers/: claude.rs  codex.rs  mod.rs
src/tui/: app.rs  event.rs  mod.rs  render.rs  views.rs
xtask/src/: main.rs
