[package]
name = "coca"
version = "0.1.0"
edition = "2021"
authors = ["one <furiedboy@gmail.com>"]
description = "Unified terminal UI for browsing, inspecting, resuming, and forking local coder-agent sessions."
readme = "README.md"
keywords = ["tui", "codex", "claude", "cli", "sessions"]
categories = ["command-line-utilities", "development-tools"]

[workspace]
members = [
    ".",
    "crates/coca-core",
    "crates/coca-daemon",
    "crates/coca-ipc",
    "crates/coca-protocol",
    "crates/coca-tui",
    "xtask",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
coca-core = { path = "crates/coca-core" }
coca-daemon = { path = "crates/coca-daemon" }
coca-protocol = { path = "crates/coca-protocol" }
coca-tui = { path = "crates/coca-tui" }
dirs = "6.0"

[dev-dependencies]
tempfile = "3.14"
