[package]
name = "coca"
version = "0.1.0"
edition = "2021"
authors = ["one <furiedboy@gmail.com>"]
description = "Unified terminal UI for browsing, inspecting, resuming, and forking local coder-agent sessions."
readme = "README.md"
keywords = ["tui", "codex", "claude", "cli", "sessions"]
categories = ["command-line-utilities", "development-tools"]

[workspace]
members = [
    ".",
    "crates/coca-app",
    "crates/coca-core",
    "crates/coca-daemon",
    "crates/coca-ipc",
    "crates/coca-protocol",
    "crates/coca-tui",
    "crates/coca-web",
    "xtask",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
coca-core = { path = "crates/coca-core" }
coca-app = { path = "crates/coca-app" }
coca-daemon = { path = "crates/coca-daemon" }
coca-protocol = { path = "crates/coca-protocol" }
coca-tui = { path = "crates/coca-tui" }
coca-web = { path = "crates/coca-web" }
dirs = "6.0"

[dev-dependencies]
tempfile = "3.14"
