[package]
name = "coca-app"
version = "0.1.0"
edition = "2021"
description = "Application use cases for coca frontends."

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
coca-core = { path = "../coca-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
