[package]
name = "coca-ipc"
version = "0.1.0"
edition = "2021"
description = "Local IPC framing helpers for coca JSON-RPC."

[dependencies]
anyhow = "1.0"
coca-protocol = { path = "../coca-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.14"
